# trial

./: .gitignore  Dockerfile  README.md  RESTRUCTURING_CHANGELOG.md  app.py  copy_folder.py  duplicate.md  inference.py  launch.py  openenv.yaml  requirements.txt  setup.py  test.py  validate.py
agents/: random_agent.py
docs/: README_OVERVIEW.md
envs/: __init__.py  core_env.py  models.py
fraud_detection/: inference.py  requirements.txt  test_all.py
fraud_detection/db/: fraud.db  seed.py
fraud_detection/envs/: core_env.py  engine.py  models.py
fraud_detection/tasks/: tasks.py
hf_space_repo/: README.md  app.py  inference.py  requirements.txt
hf_space_repo/fraud_detection.egg-info/: PKG-INFO  SOURCES.txt
hf_space_repo/fraud_detection/db/: fraud.db
hf_space_repo/fraud_detection/envs/: core_env.py  engine.py
hf_space_repo/fraud_detection/tasks/: tasks.py
hf_space_repo/server/: app.py
winners/: .gitignore  .spacesconfig  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  HOW_TO_RUN.md  LICENSE  QUICKSTART.md  README_HF.md  README_SPACE.md  SUBMISSION_SUMMARY.md  app.py  check_db.py  pre_submission_check.py  test.py
winners/archived_scripts/: run.py  test_inference_mock.py
winners/fraud_detection/: __init__.py
winners/fraud_detection/db/: fraud.db  seed.py
winners/hf_space/: .env.example  pyproject.toml
winners/hf_space/fraud_detection/: test_all.py
winners/hf_space/fraud_detection/tasks/: tasks.py
winners/hf_space/server/: __init__.py
